--- a/frontend/onelick/src/Component/HomeComponent/AboutSection/About.css
+++ b/frontend/onelick/src/Component/HomeComponent/AboutSection/About.css
@@ -1,6 +1,7 @@
 #about_section{
     display: flex;
     flex-direction: column;
+    overflow: hidden;
 }
 .about_img_content_hld{
     margin-top: 120px;
