--- a/frontend/onelick/src/Component/HomeComponent/FeaturedCandidates/FeaturedCandidates.css
+++ b/frontend/onelick/src/Component/HomeComponent/FeaturedCandidates/FeaturedCandidates.css
@@ -12,6 +12,7 @@
     -moz-border-radius: 10px;
     -ms-border-radius: 10px;
     -o-border-radius: 10px;
+    overflow: hidden;
 }
 .featured_candidates_left{
     display: flex;
