--- a/frontend/onelick/src/Component/HomeComponent/Featured_jobs/Features_jobs.css
+++ b/frontend/onelick/src/Component/HomeComponent/Featured_jobs/Features_jobs.css
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     padding: 40px 100px;
+    overflow: hidden;
 }
 
 .Featured_jobs_categories_hld {
