--- a/frontend/onelick/src/Component/HomeComponent/RecentJobs/RecentJobs.css
+++ b/frontend/onelick/src/Component/HomeComponent/RecentJobs/RecentJobs.css
@@ -5,6 +5,7 @@
    display: flex;
    flex-direction: column;
    gap: 60px;
+   overflow: hidden;
 }
 
 /* slider */
