--- a/frontend/onelick/src/Component/HomeComponent/Testimonial/Testimonial.css
+++ b/frontend/onelick/src/Component/HomeComponent/Testimonial/Testimonial.css
@@ -1,5 +1,6 @@
 #Testimonial_container {
     padding: 250px 0;
+    overflow: hidden;
 }
 
 .testimonial_up {
